force-app/main/default/objects/AgileTask__c/AgileTask__c.object-meta.xml
<CustomObject>
    <label>Tarefa da work</label>
    <nameField>
        <label>Tarefa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarefas da work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>