force-app/main/default/objects/AgileTask__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Este campo determina a ação que ocorrerá quando a tarefa for finalizada.</inlineHelpText>
    <label>Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoAction</fullName>
                <label>Sem Ação</label>
            </value>
            <value>
                <fullName>ReleaseToBuiding</fullName>
                <label>Libera Work para Construção</label>
            </value>
            <value>
                <fullName>FirstCall</fullName>
                <label>Registra Primeiro Atendimento</label>
            </value>
            <value>
                <fullName>ReleaseTest</fullName>
                <label>Liberação para Teste</label>
            </value>
            <value>
                <fullName>ReleaseToHomolog</fullName>
                <label>Finaliza Construção</label>
            </value>
            <value>
                <fullName>Closing</fullName>
                <label>Encerra a Work</label>
            </value>
            <value>
                <fullName>FirstDelivery</fullName>
                <label>Registra Primeira Solução Entregue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>