force-app/main/default/objects/AgileTask__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Atribuído a</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A pessoa precisa fazer parte do time para receber tarefas atribuídas a ela.</errorMessage>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>AgileTeamMember__c.AgileTeam__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileTeamMember__c</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>