force-app/main/default/objects/AgileTask__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <inlineHelpText>Neste campo devemos fazer a classificação do Bug, após análise. Por padrão todo bug nasce como &apos;Bug&apos;!</inlineHelpText>
    <label>Classificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
                <default>true</default>
                <label>Bug</label>
            </value>
            <value>
                <fullName>BugNoGo</fullName>
                <label>Bug No-Go</label>
            </value>
            <value>
                <fullName>Improvement</fullName>
                <label>Melhorias</label>
            </value>
            <value>
                <fullName>WorkAsDesigned</fullName>
                <label>Orientação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>