force-app/main/default/objects/AgileTask__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <inlineHelpText>Este campo indica a data em que a tarefa foi finalizada.</inlineHelpText>
    <label>Data da Finalização</label>
    <type>Date</type>
</CustomField>