force-app/main/default/objects/AgileTask__c/fields/CompletedEffort__c.field-meta.xml
<CustomField>
    <fullName>CompletedEffort__c</fullName>
    <formula>EstimatedEffort__c -  RemainingEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esforço Realizado (hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>