force-app/main/default/objects/AgileTask__c/fields/CompletedOn__c.field-meta.xml
<CustomField>
    <fullName>CompletedOn__c</fullName>
    <label>Finalizado em</label>
    <type>DateTime</type>
</CustomField>