force-app/main/default/objects/AgileTask__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Devemos descrever de forma objetiva o que será feito nesta tarefa.</inlineHelpText>
    <label>Descrição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>