force-app/main/default/objects/AgileTask__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <inlineHelpText>Este campo data representa uma data estimada para realização da tarefa.</inlineHelpText>
    <label>Data Prevista</label>
    <type>Date</type>
</CustomField>