force-app/main/default/objects/AgileTask__c/fields/EstimatedEffort__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEffort__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Neste campo devemos adicionar as horas estimadas para esta tarefa</inlineHelpText>
    <label>Esforço Estimado (hr)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>