force-app/main/default/objects/AgileTask__c/fields/ExpectedTestResult__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTestResult__c</fullName>
    <inlineHelpText>Neste campo devemos preencher o resultado esperado pelo teste deste critério de aceite</inlineHelpText>
    <label>Resultado Esperado do Teste</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>