force-app/main/default/objects/AgileTask__c/fields/FunctionType__c.field-meta.xml
<CustomField>
    <fullName>FunctionType__c</fullName>
    <inlineHelpText>Este campo representa a função da pessoa atribuída a tarefa, ele é utilizado como referência para sumarização das horas na work.</inlineHelpText>
    <label>Função</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FunctionAgile</valueSetName>
    </valueSet>
</CustomField>