force-app/main/default/objects/AgileTask__c/fields/LinkedTask__c.field-meta.xml
<CustomField>
    <fullName>LinkedTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Este campo indica se essa tarefa esta vinculada a outra tarefa desta ou de outra work.</inlineHelpText>
    <label>Tarefa Vinculada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Work__c</field>
            <operation>equals</operation>
            <valueField>$Source.Work__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileTask__c</referenceTo>
    <relationshipLabel>Tarefas Vinculadas</relationshipLabel>
    <relationshipName>NeTarefas</relationshipName>
    <type>Lookup</type>
</CustomField>