force-app/main/default/objects/AgileTask__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <inlineHelpText>Neste campo podemos adicionar os links de arquivos compartilhados.</inlineHelpText>
    <label>Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>