force-app/main/default/objects/AgileTask__c/fields/LoggedEffort__c.field-meta.xml
<CustomField>
    <fullName>LoggedEffort__c</fullName>
    <inlineHelpText>Neste campo devemos colocar as horas que trabalhamos nessa tarefa</inlineHelpText>
    <label>Esforço Logado (hr)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>