force-app/main/default/objects/AgileTask__c/fields/MyBacklog__c.field-meta.xml
<CustomField>
    <fullName>MyBacklog__c</fullName>
    <formula>IF( AND (AssignedTo__r.AgileResource__r.AgileUser__c =  $User.Id,  NOT(ISPICKVAL(Work__r.Status__c, &apos;Canceled&apos;)),  Work__r.Sprint__c &lt;&gt; Null ) , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meu Backlog</label>
    <type>Checkbox</type>
</CustomField>