force-app/main/default/objects/AgileTask__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Este campo representa a ordem de execução das tarefas dentro da Work.</inlineHelpText>
    <label>Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>