force-app/main/default/objects/AgileTask__c/fields/RemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>RemainingEffort__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Este campo representas horas que faltam para a tarefa ser completada.</inlineHelpText>
    <label>Esforço Restantes (hr)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>