force-app/main/default/objects/AgileTask__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Esta campo indica em qual Sprint essa tarefa foi concluída</inlineHelpText>
    <label>Sprint Realizada</label>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>