force-app/main/default/objects/AgileTask__c/fields/SprintCreated__c.field-meta.xml
<CustomField>
    <fullName>SprintCreated__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Este campo indica em qual Sprint o Teste ou Bug foram criados!</inlineHelpText>
    <label>Criado na Sprint</label>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Tarefas (Criado na Sprint)</relationshipLabel>
    <relationshipName>SprintCreatedTestsAndBugs</relationshipName>
    <type>Lookup</type>
</CustomField>