force-app/main/default/objects/AgileTask__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Time</label>
    <referenceTo>AgileTeam__c</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Taks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>