force-app/main/default/objects/AgileTask__c/fields/TestCaseDesc__c.field-meta.xml
<CustomField>
    <fullName>TestCaseDesc__c</fullName>
    <inlineHelpText>Neste campo deve ser descrito o cenário de teste que deve ser realizado para validar o critério de aceite da Work
Proprietário dos dados</inlineHelpText>
    <label>Cenário de Teste</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>