force-app/main/default/objects/AgileTask__c/fields/TestedWithBug__c.field-meta.xml
<CustomField>
    <fullName>TestedWithBug__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Este campo indica que foi encontrado um erro no cenário de teste realizado. Quando esse campo é marcado o erro/bug será criado automaticamente na Work que controla os Erros no Backlog da Sprint.</inlineHelpText>
    <label>Testado com erro</label>
    <type>Checkbox</type>
</CustomField>