force-app/main/default/objects/AgileTask__c/fields/TestEvidence__c.field-meta.xml
<CustomField>
    <fullName>TestEvidence__c</fullName>
    <inlineHelpText>Neste campo devemos preencher o resultado do teste realizado em caso de sucesso ou de Bug. Em ambos os casos é recomendado que além da descrição sejam adicionados os principais links dos registros utilizados no teste do salesforce.</inlineHelpText>
    <label>Evidência do Teste</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>