force-app/main/default/objects/AgileTask__c/fields/Time_Id__c.field-meta.xml
<CustomField>
    <fullName>Time_Id__c</fullName>
    <formula>Work__r.Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Id</label>
    <type>Text</type>
</CustomField>