force-app/main/default/objects/AgileTask__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Devemos indicar qual Work essa tarefa esta executando.</inlineHelpText>
    <label>Work</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>AgileWork__c.Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileWork__c</referenceTo>
    <relationshipLabel>Tarefas</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>