force-app/main/default/objects/AgileTask__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>Erros encontrados nas Sprints durante período de Homologação</description>
    <label>Ocorrência</label>
</RecordType>