force-app/main/default/objects/AgileTask__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <description>Tarefas gerais do projeto</description>
    <label>Tarefa</label>
</RecordType>