force-app/main/default/objects/AgileTask__c/recordTypes/Test.recordType-meta.xml
<RecordType>
    <fullName>Test</fullName>
    <active>true</active>
    <description>Testes realizados na Sprint ou durante a homologação</description>
    <label>Teste</label>
</RecordType>