force-app/main/default/objects/AgileTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>SprintCreated__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>MyBacklog__c</columns>
    <columns>Team__c</columns>
    <columns>Work__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AgileTask__c.Test</value>
    </filters>
    <label>Tudo</label>
</ListView>